RESOLVED FIXED41152
Minor fixes to Mac FontPlatformData & SimpleFontPlatformData classes
https://bugs.webkit.org/show_bug.cgi?id=41152
Summary Minor fixes to Mac FontPlatformData & SimpleFontPlatformData classes
Jeremy Moskovich
Reported 2010-06-24 05:12:13 PDT
Bug to track a few very minor fixes to the Mac FontPlatformData & SimpleFontPlatformData classes .
Attachments
patch 1 (11.54 KB, patch)
2010-06-24 05:15 PDT, Jeremy Moskovich
mitz: review-
patch 2 (2.42 KB, patch)
2010-06-24 09:39 PDT, Jeremy Moskovich
mitz: review+
ap: commit-queue-
patch 3 (2.39 KB, patch)
2010-06-30 05:50 PDT, Jeremy Moskovich
commit-queue: commit-queue-
patch 4 (2.39 KB, patch)
2010-06-30 08:01 PDT, Jeremy Moskovich
no flags
Jeremy Moskovich
Comment 1 2010-06-24 05:15:23 PDT
Created attachment 59644 [details] patch 1 * Avoid an extra FontPlatformData copy in SimpleFontDataMac.mm * Fix a typo in a comment in FontPlatformDataMac.mm * Change ' *' -> '* ' to match style guide
mitz
Comment 2 2010-06-24 08:23:40 PDT
Comment on attachment 59644 [details] patch 1 While the WebKit Coding Style Guidelines only say “Pointer types in non-C++ code — Pointer types should be written with a space between the type and the * (so the * is adjacent to the following identifier if any)”, WebKit style is for Objective-C types to always have a space between the type and the *, whether they appear in C, C++, Objective-C or Objective-C++ code, and most of the code adheres to this style.
Jeremy Moskovich
Comment 3 2010-06-24 09:39:03 PDT
Created attachment 59663 [details] patch 2
Alexey Proskuryakov
Comment 4 2010-06-25 11:52:00 PDT
Comment on attachment 59663 [details] patch 2 + * Fix a typo in a comment in FontPlatformDataMac.mm The actual fix isn't in a comment. Please fix before loading.
Alexey Proskuryakov
Comment 5 2010-06-25 11:52:10 PDT
before landing
Jeremy Moskovich
Comment 6 2010-06-30 05:50:18 PDT
Created attachment 60115 [details] patch 3 Changelog fixed up.
WebKit Commit Bot
Comment 7 2010-06-30 07:37:14 PDT
Comment on attachment 60115 [details] patch 3 Rejecting patch 60115 from commit-queue. Unexpected failure when processing patch! Please file a bug against webkit-patch. Failed to run "['./WebKitTools/Scripts/webkit-patch', '--status-host=webkit-commit-queue.appspot.com', 'land-attachment', '--force-clean', '--build', '--non-interactive', '--ignore-builders', '--build-style=both', '--quiet', 60115, '--test', '--parent-command=commit-queue', '--no-update']" exit_code: 1 Last 500 characters of output: cgi?id=60115&action=edit Fetching: https://bugs.webkit.org/show_bug.cgi?id=41152&ctype=xml Processing 1 patch from 1 bug. Cleaning working directory Processing patch 60115 from bug 41152. NOBODY (OOPS!) found in /Users/eseidel/Projects/CommitQueue/WebCore/ChangeLog does not appear to be a valid reviewer according to committers.py. ERROR: /Users/eseidel/Projects/CommitQueue/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive).
Jeremy Moskovich
Comment 8 2010-06-30 08:01:56 PDT
Created attachment 60119 [details] patch 4
WebKit Commit Bot
Comment 9 2010-06-30 08:29:33 PDT
Comment on attachment 60119 [details] patch 4 Clearing flags on attachment: 60119 Committed r62186: <http://trac.webkit.org/changeset/62186>
WebKit Commit Bot
Comment 10 2010-06-30 08:29:38 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.