2010-06-30  Jeremy Moskovich  <jeremy@chromium.org>

Reviewed by Dan Bernstein.

        Minor tweaks to FontPlatformDataMac & SimpleFontDataMac.mm

        * Avoid an extra FontPlatformData copy in SimpleFontDataMac.mm
        * Fix a typo in FontPlatformDataMac.mm

        https://bugs.webkit.org/show_bug.cgi?id=41152

        No behavior changes so no new tests.

        * platform/graphics/mac/FontPlatformDataMac.mm:
        (WebCore::FontPlatformData::description):
        * platform/graphics/mac/SimpleFontDataMac.mm:
        (WebCore::copyFontTableForTag):

Canonical link: https://commits.webkit.org/53142@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@62186 268f45cc-cd09-0410-ab3c-d52691b4dbfc